# sge

./: .git-blame-ignore-revs  .gitignore  .gitmodules  .jvmopts  .scalafix.conf  .scalafmt.conf  .sdkmanrc  AUTHORS  CHANGES.md  CLAUDE.md  CONTRIBUTORS  Justfile  NOTICE  PROGRESS.md  README.md  THIRD-PARTY-LICENSES  THIRD_PARTY_LICENSES.md  build.sbt  ci-fix-tracker.md  package-lock.json  package.json  sge-dev
.claude/: settings.json  settings.local.json
.claude/commands/: audit-file.md  audit-package.md  audit-status.md  check-progress.md  convert-file.md  correct-package.md  find-issues.md  lint.md  scalafix.md  verify-file.md
.claude/hooks/: pre-tool-use.sh  setup-path.sh
.cursor/rules/: convert-java-to-scala.mdc
.github/workflows/: ci.yml  release.yml
.rescale/: doctor.yaml  runners.yaml  scan-targets.txt  source-repos.yaml
.rescale/data/: audit.tsv  covenant-gate-baseline.tsv  issues.tsv  migration.tsv  remediation-baseline.tsv  skip-policy.tsv
.rescale/scripts/: covenant-gate.sh  red-green.sh
agents/: port-source-audit-log.md  re-audit-batch-A.md  re-audit-batch-B.md  re-audit-batch-C.md  re-audit-batch-D.md  re-audit-batch-E.md  re-audit-batch-F.md  re-audit-batch-G.md  re-audit-batch-H.md  re-audit-batch-T1.md  re-audit-batch-T2.md  re-audit-batch-T3.md  re-audit-consolidated-2026-04-18.md  re-audit-filechooser-deep.md  sample_compare_timepiece.txt  shortcuts_extensions_subset.txt  shortcuts_scan.txt
demos/: README.md  build.sbt
demos/project/: AssetGenerator.scala  NativeCrossAxis.scala  build.sbt  plugins.sbt
docs/: getting-started.md
docs/analysis/: review-claude.md  review-codex.md  review-cursor.md  review-grok.md
docs/architecture/: README.md  android-native-constraints.md  backend-analysis.md  backend-android-analysis.md  backend-cross-comparison.md  backend-graphics-strategy.md  backend-gwt-analysis.md  backend-headless-analysis.md  backend-ios-analysis.md  backend-lwjgl-legacy-analysis.md  backend-lwjgl3-analysis.md  build-structure.md  cross-platform-settings.md  ios-backend-feasibility.md  ios-strategy.md  (+6 more)
native-components/: Cargo.toml  build.rs
native-components/.cargo/: config.toml
native-components/src/: audio.rs  buffer_ops.rs  etc1.rs  freetype.rs  gdx2d.rs  jni_bridge.rs  lib.rs  physics.rs
original-src/: Untitled
project/: TestAssets.scala  Versions.scala  build.sbt  plugins.sbt
sbt-sge/: build.sbt
sge-build/: build.sbt
(+3010 files in other folders)
