[package]
name = "sge-native-ops"
version = "0.1.0"
edition = "2021"
description = "ETC1 codec + buffer operations for SGE (C ABI + optional JNI for Android)"

[lib]
name = "sge_native_ops"
crate-type = ["cdylib", "staticlib"]

[dependencies]
libc = "0.2"
jni = { version = "0.21", optional = true }

[features]
default = []
# JNI bridge for Android (ART doesn't support Panama). Desktop JVM uses Panama FFM via C ABI.
android = ["jni"]

[profile.release]
opt-level = 3
lto = true
